# swarp

./: .gitignore  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h.in  configure  configure.ac  swarp.spec.in
branches/RoyBranch/: ChangeLog  THANKS  acx_prog_cc_optim.m4  config.h.in  configure  configure.ac
branches/RoyBranch/man/: Makefile.am  swarp.1
branches/RoyBranch/src/: Makefile.in  back.c  back.h  coadd.c  field.c  field.h  fitswcs.c  header.c  interpolate.h  main.c  makeit.c  misc.c  preflist.h  prefs.h  projapprox.c  projapprox.h  resample.c
branches/RoyBranch/src/fits/: fitsbody.c  fitscat.c  fitscat.h  fitscat_defs.h
branches/no-cfitsio/: AUTHORS  Makefile.in  configure  configure.ac
branches/no-cfitsio/man/: swarp.1
branches/no-cfitsio/src/: coadd.c  coadd.h  field.c  field.h  globals.h  makeit.c  preflist.h  prefs.c  prefs.h  projapprox.h  resample.c  weight.c
branches/no-cfitsio/src/fits/: Makefile.in
branches/no-cfitsio/src/wcs/: Makefile.in
debian/: Makefile  Makefile.am  Makefile.in  README  changelog  control  rules
doc/: Makefile.am  TODO
doc/src/: conf.py  conf.py.in  index.rst
man/: Makefile.in  swarp.1  swarp.1.in
software/swarp/: AUTHORS  ChangeLog  HISTORY  Makefile.am  Makefile.in  README  THANKS  TODO  aclocal.m4  acx_mpi.m4  config.h.in  configure  configure.ac  swarp-mp.spec.in  swarp.spec.in
software/swarp/man/: Makefile.in  swarp.1  swarp.1.in
software/swarp/src/: Makefile.am  Makefile.in  back.c  back.h  coadd.c  coadd.h  data.h  define.h  field.c  field.h  fitswcs.c  fitswcs.h  header.c  header.h  interpolate.c  key.h  main.c  makeit.c  preflist.h  prefs.c  prefs.h  projapprox.c  resample.c  wcscelsys.h  xml.c  xml.h
software/swarp/src/fits/: Makefile.in  fitscleanup.c  fitshead.c  fitsutil.c
software/swarp/src/wcs/: Makefile.in  proj.c
software/swarp/xsl/: swarp.xsl
softwareTERAPIX/swarp/: AUTHORS  BUGS  ChangeLog  HISTORY  Makefile.am  Makefile.in  THANKS  aclocal.m4  config.h.in  configure  configure.ac  swarp-mp.spec.in  swarp.spec.in
softwareTERAPIX/swarp/man/: Makefile.in  swarp.1
softwareTERAPIX/swarp/src/: Makefile.am  Makefile.in  back.c  coadd.c  field.c  field.h  fitswcs.c  fitswcs.h  globals.h  header.c  interpolate.c  key.h  main.c  makeit.c  prefs.c  prefs.h  projapprox.h  resample.c
softwareTERAPIX/swarp/src/fits/: Makefile.in  fitscleanup.c  fitswrite.c
softwareTERAPIX/swarp/src/wcs/: Makefile.in  cel.c  poly.c  poly.h  proj.c
src/: Makefile.am  Makefile.in  back.c  coadd.c  coadd.h  data.c  data.h  define.h  dgeo.c  dgeo.h  field.c  field.h  fitswcs.c  fitswcs.h  globals.h  header.c  interpolate.c  interpolate.h  main.c  makeit.c  misc.h  preflist.h  prefs.c  prefs.h  projapprox.c  projapprox.h  resample.c  resample.h  threads.c  threads.h  types.h  wcscelsys.h  weight.c  weight.h  xml.c  xml.h
src/fits/: Makefile.in  fitsbody.c  fitscat.c  fitscat.h  fitscat_defs.h  fitshead.c  fitswrite.c
src/wcs/: Makefile.in  poly.c  poly.h  proj.c  proj.h
tags/2.17.5/: HISTORY  aclocal.m4  acx_prog_cc_optim.m4  configure.ac  swarp.spec.in
tags/2.17.5/src/: Makefile.in  back.h  data.c  fitswcs.c  interpolate.c  resample.h  xml.c
tags/2.17.5/src/fits/: Makefile.in
tags/2.17.5/xsl/: swarp.xsl
tags/2.17.6/: configure
tags/2.17.6/src/: coadd.c  field.c
tags/2.17.6/xsl/: swarp.xsl
tags/2.19.1/: COPYRIGHT  ChangeLog  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  swarp.spec.in
tags/2.19.1/man/: Makefile.am  Makefile.in  swarp.1.in
tags/2.19.1/src/: back.h  coadd.c  fitswcs.c  fitswcs.h  header.c  interpolate.c  main.c  makeit.c  prefs.c  weight.c
tags/2.19.1/src/fits/: Makefile.in  fitsbody.c
tags/2.19.1/test/: test.fits
tags/2.38.0/: THANKS  aclocal.m4
tags/2.38.0/man/: swarp.x
tags/2.38.0/src/: Makefile.am  data.c  define.h  fitswcs.c  header.h  interpolate.c  prefs.c  xml.c
tags/2.38.0/xsl/: swarp.xsl
trunk/: BUGS  ChangeLog  HISTORY  Makefile.am  Makefile.in  THANKS  aclocal.m4  config.h.in  configure  configure.ac  swarp.spec.in
trunk/man/: Makefile.in  swarp.1
trunk/src/: Makefile.am  Makefile.in  back.c  coadd.c  coadd.h  data.h  define.h  field.c  field.h  fitswcs.c  globals.h  header.c  interpolate.c  interpolate.h  main.c  makeit.c  misc.c  misc.h  preflist.h  prefs.c  prefs.h  projapprox.c  resample.c  threads.c  weight.c  weight.h  xml.c  xml.h
trunk/src/fits/: Makefile.in  fitsbody.c  fitscat.c  fitscat.h  fitsutil.c
trunk/src/wcs/: Makefile.in
trunk/xsl/: swarp.xsl
xsl/: swarp.xsl
